--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import GoogleAnalytics from '../components/GoogleAnalytics.astro';
+import ConsentBanner from '../components/ConsentBanner.astro';
 ---
 
 <html lang="en">
@@ -9,6 +10,8 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
+		<ConsentBanner />
+		<GoogleAnalytics />
 	</head>
 	<body>
 		<h1>Astro</h1>
