--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,6 @@ import ConsentBanner from '../components/ConsentBanner.astro';
 		<GoogleAnalytics />
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Astro 16:00</h1>
 	</body>
 </html>
